--- a/src/sass/components/_modal-completed.scss
+++ b/src/sass/components/_modal-completed.scss
@@ -1,7 +1,7 @@
 .modal-completed {
 	display: none;
-	padding: 3rem 3.75rem;
-	max-width: 578px;
+	padding: 2.5rem 2rem;
+	max-width: 90%;
 	width: 578px;
 	top: 50%;
 	left: 50%;
@@ -9,24 +9,27 @@
 	background-color: var(--clr-white);
 	border-radius: 10px;
 	z-index: 5;
+	text-align: center;
+	border: 1px solid green;
 
 	.modal-completed-logo {
-		width: 5.5rem;
-		margin-bottom: 2.75rem;
+		width: 4rem;
+		margin-bottom: 1.5rem;
 	}
 
 	.modal-completed-title {
-		font-size: 1.5rem;
+		font-size: 1.25rem;
 		font-weight: 700;
 	}
 	.modal-completed-text {
 		margin-bottom: 2rem;
+		font-size: 0.85rem;
 		color: var(--clr-gray);
-		line-height: 32px;
+		line-height: 25px;
 	}
 	.got-it-btn {
-		padding: 12px;
-		width: 100px;
+		padding: 15px;
+		width: 110px;
 		font-size: 0.85rem;
 		font-weight: 600;
 	}
