--- a/src/sass/utils/_media.scss
+++ b/src/sass/utils/_media.scss
@@ -137,19 +137,60 @@
 		.modal-text {
 			margin: 0 0 2rem 0;
 			line-height: 20px;
-			
 		}
 		.pledge-list {
 			.pledge-item {
+				.radio-input {
+					top: 1.25rem;
+				}
+
 				.pledge-header {
 					.pledge-name {
 						font-size: 1rem;
 					}
+					.pledge-amount-info {
+						font-size: 1rem;
+					}
 				}
 				.pledge-description {
+					padding: 0 1.5rem 0 4.5rem;
 					font-size: 0.95rem;
 				}
+
+				.pledge-stock {
+					position: static;
+				}
+				.pledge-input-group {
+					.pledge-input-label {
+						font-size: 1rem;
+					}
+				}
 			}
+		}
+	}
+	.modal-completed {
+		padding: 3rem 3.75rem;
+		max-width: 578px;
+
+		.modal-completed-logo {
+			width: 5.5rem;
+			margin-bottom: 2.75rem;
+		}
+		.modal-completed-title {
+			font-size: 1.5rem;
+			font-weight: 700;
+		}
+		.modal-completed-text {
+			margin-bottom: 2rem;
+			font-size: 1rem;
+			color: var(--clr-gray);
+			line-height: 32px;
+		}
+		.got-it-btn {
+			padding: 12px;
+			width: 100px;
+			font-size: 0.85rem;
+			font-weight: 600;
 		}
 	}
 }
